# snake

./: .coverage  high_scores.yaml  pyproject.toml  snake_scores.yml
snake/: board.py  checkerboard.py  code2.py  codesession2.py  dir.py  exceptions.py  fruit.py  game.py  gameobject.py  lignecommande.py  main.py  observer.py  score.py  scores.py  snake.py  snake_body.py  state.py  subject.py  tile.py
tests/: __init__.py  test_0100_tile.py
