[tool.poetry]
name = "snake"
version = "0.1.0"
description = ""
authors = ["Solène Losantos <solene.losantos@etu.minesparis.psl.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mypy = "^1.13.0"
ruff = "^0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
snake="snake.codesession2:snake"

[tool.mypy]
files = "."
strict = true
pretty = true
show_error_code_links = true
show_error_context = true
show_column_numbers = true